--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MichaelSoftware Store</title>
+    <title>MichaelSoftware APK</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -278,6 +278,147 @@
             text-align: center;
             font-style: italic;
         }
+        /* Random Pop-up Styles - The Roulette of Retardation */
+        /* Turbo Dragon Racing - Fiery Red Rage */
+        .dragon-popup-content {
+            background: linear-gradient(145deg, #FF4500, #DC143C);
+            color: #fff;
+            border: 2px solid #FFD700;
+        }
+        .dragon-popup-header {
+            color: #FFD700;
+            font-size: 20px;
+            font-weight: bold;
+        }
+        .dragon-popup-download-btn {
+            background: linear-gradient(145deg, #FF8C00, #FF4500);
+            color: #fff;
+            font-weight: bold;
+        }
+        .dragon-popup-desc {
+            color: #fff;
+            direction: rtl;
+            text-align: right;
+        }
+        .dragon-popup-desc-en {
+            color: #fff;
+            direction: ltr;
+            text-align: center;
+            font-style: italic;
+        }
+        /* Galactic Chef Simulator - Cosmic Blue Bullshit */
+        .chef-popup-content {
+            background: linear-gradient(145deg, #4B0082, #000080);
+            color: #fff;
+            border: 2px solid #00BFFF;
+        }
+        .chef-popup-header {
+            color: #00FFFF;
+            font-size: 20px;
+            font-weight: bold;
+        }
+        .chef-popup-download-btn {
+            background: linear-gradient(145deg, #FF1493, #8A2BE2);
+            color: #fff;
+            font-weight: bold;
+        }
+        .chef-popup-desc {
+            color: #fff;
+            direction: rtl;
+            text-align: right;
+        }
+        .chef-popup-desc-en {
+            color: #fff;
+            direction: ltr;
+            text-align: center;
+            font-style: italic;
+        }
+        /* Ninja Pixel Warriors - Shadowy Green Slash */
+        .ninja-popup-content {
+            background: linear-gradient(145deg, #006400, #228B22);
+            color: #fff;
+            border: 2px solid #90EE90;
+        }
+        .ninja-popup-header {
+            color: #F0E68C;
+            font-size: 20px;
+            font-weight: bold;
+        }
+        .ninja-popup-download-btn {
+            background: linear-gradient(145deg, #000000, #333333);
+            color: #fff;
+            font-weight: bold;
+        }
+        .ninja-popup-desc {
+            color: #fff;
+            direction: rtl;
+            text-align: right;
+        }
+        .ninja-popup-desc-en {
+            color: #fff;
+            direction: ltr;
+            text-align: center;
+            font-style: italic;
+        }
+        /* Haunted Mansion Builder - Ghostly Purple Phantasm */
+        .haunted-popup-content {
+            background: linear-gradient(145deg, #4B0082, #9370DB);
+            color: #fff;
+            border: 2px solid #DDA0DD;
+            animation: haunt 3s infinite alternate;
+        }
+        @keyframes haunt {
+            0% { opacity: 0.8; }
+            100% { opacity: 1; }
+        }
+        .haunted-popup-header {
+            color: #FFF8DC;
+            font-size: 20px;
+            font-weight: bold;
+        }
+        .haunted-popup-download-btn {
+            background: linear-gradient(145deg, #8B008B, #4B0082);
+            color: #fff;
+            font-weight: bold;
+        }
+        .haunted-popup-desc {
+            color: #fff;
+            direction: rtl;
+            text-align: right;
+        }
+        .haunted-popup-desc-en {
+            color: #fff;
+            direction: ltr;
+            text-align: center;
+            font-style: italic;
+        }
+        /* Robo Battle Arena - Metallic Gray Mayhem */
+        .robo-popup-content {
+            background: linear-gradient(145deg, #A9A9A9, #696969);
+            color: #fff;
+            border: 2px solid #D3D3D3;
+        }
+        .robo-popup-header {
+            color: #FFA500;
+            font-size: 20px;
+            font-weight: bold;
+        }
+        .robo-popup-download-btn {
+            background: linear-gradient(145deg, #FF4500, #FF8C00);
+            color: #fff;
+            font-weight: bold;
+        }
+        .robo-popup-desc {
+            color: #fff;
+            direction: rtl;
+            text-align: right;
+        }
+        .robo-popup-desc-en {
+            color: #fff;
+            direction: ltr;
+            text-align: center;
+            font-style: italic;
+        }
     </style>
 </head>
 <body>
@@ -396,10 +537,111 @@
         </div>
     </div>
 
+    <!-- Random Pop-up 1: Turbo Dragon Racing -->
+    <div id="dragonPopup" class="popup-overlay" onclick="closePopup(event, 'dragonPopup')">
+        <div class="dragon-popup-content popup-content" onclick="event.stopPropagation()">
+            <div class="dragon-popup-header popup-header">
+                🐉🔥 Turbo Dragon Racing, توربو دراجون ريسينغ, مكسور معدل APK, أندرويد 2023 فري 100% نو فيروس 💯🚀 — Download size: 78.2 MB 💾⚡ — fire mode, speed hack, dragon boost, leaderboard maxed, emoji madness
+            </div>
+            <div class="dragon-popup-desc popup-desc">
+                الوصف: اركض مع التنانين، أو اجعل منافسيك يحترقون، في هذه السباقات الخارقة! 🐉🏎️💣
+            </div>
+            <div class="popup-desc-en dragon-popup-desc-en">
+                Race with dragons, or make your rivals burn, in these super races!
+            </div>
+            <button class="dragon-popup-download-btn popup-download-btn" onclick="alert('You fire-breathing fucknugget—thought dragons were dropping boosts? This "racing" hack just flames your firewall; speed off a cliff into scam hell, you scaled shithead.')">
+                BOOST & DOWNLOAD
+            </button>
+            <button class="close-btn" onclick="closePopup(event, 'dragonPopup')">Crash This Dragon</button>
+        </div>
+    </div>
+
+    <!-- Random Pop-up 2: Galactic Chef Simulator -->
+    <div id="chefPopup" class="popup-overlay" onclick="closePopup(event, 'chefPopup')">
+        <div class="chef-popup-content popup-content" onclick="event.stopPropagation()">
+            <div class="chef-popup-header popup-header">
+                🍳🚀 Galactic Chef Simulator, محاكاة الطباخ المجري, مكسور معدل APK, أندرويد 2022 فري 100% نو فيروس 💯🔥 — Download size: 64.5 MB 💾🍔 — space kitchen, zero gravity, alien recipes, chef mode, cooking chaos
+            </div>
+            <div class="chef-popup-desc popup-desc">
+                الوصف: اطبخ أطباق فضائية، أو اجعل فريقك يتقيأ من الطعم، في هذه المحاكاة المجنونة! 👩‍🍳🛸💥
+            </div>
+            <div class="popup-desc-en chef-popup-desc-en">
+                Cook space dishes, or make your team puke from the taste, in this crazy simulation!
+            </div>
+            <button class="chef-popup-download-btn popup-download-btn" onclick="alert('You zero-G glutton—chef's kiss my ass! This "simulator" serves up malware soufflé that'll make your phone hurl; float away puking pixels, space barf-bag.')">
+                COOK & DOWNLOAD
+            </button>
+            <button class="close-btn" onclick="closePopup(event, 'chefPopup')">Spit It Out</button>
+        </div>
+    </div>
+
+    <!-- Random Pop-up 3: Ninja Pixel Warriors -->
+    <div id="ninjaPopup" class="popup-overlay" onclick="closePopup(event, 'ninjaPopup')">
+        <div class="ninja-popup-content popup-content" onclick="event.stopPropagation()">
+            <div class="ninja-popup-header popup-header">
+                🥷🎮 Ninja Pixel Warriors, محاربو النينجا بيكسل, مكسور معدل APK, أندرويد 2021 فري 100% نو فيروس 💯🚀 — Download size: 88.9 MB 💾🔥 — stealth attack, pixel slash, ultimate combo, boss fight, emoji storm
+            </div>
+            <div class="ninja-popup-desc popup-desc">
+                الوصف: قاتل الظلال، أو اجعل فريقك ينهار تحت ضربات البيكسل، في هذه اللعبة المدهشة! 🗡️🖤💣
+            </div>
+            <div class="popup-desc-en ninja-popup-desc-en">
+                Fight the shadows, or make your team collapse under pixel strikes, in this amazing game!
+            </div>
+            <button class="ninja-popup-download-btn popup-download-btn" onclick="alert('You pixelated pussy—ninja stealth? More like sneak-attack spyware! This "warrior" slashes your security; shuriken yourself in the nuts, shadow-dicking shogun.')">
+                SLASH & DOWNLOAD
+            </button>
+            <button class="close-btn" onclick="closePopup(event, 'ninjaPopup')">Vanish, Ninja</button>
+        </div>
+    </div>
+
+    <!-- Random Pop-up 4: Haunted Mansion Builder -->
+    <div id="hauntedPopup" class="popup-overlay" onclick="closePopup(event, 'hauntedPopup')">
+        <div class="haunted-popup-content popup-content" onclick="event.stopPropagation()">
+            <div class="haunted-popup-header popup-header">
+                🏚️👻 Haunted Mansion Builder, بناء القصر المسكون, مكسور معدل APK, أندرويد فري 100% نو فيروس 💯💥 — Download size: 101.3 MB 💾🎃 — ghost mode, trap rooms, scare boost, mansion chaos, paranormal fun
+            </div>
+            <div class="haunted-popup-desc popup-desc">
+                الوصف: ابنِ قصر مرعب، أو اجعل الأشباح تتحكم بفريقك، في هذه النسخة المعدلة المجنونة! 👻🏰💣
+            </div>
+            <div class="popup-desc-en haunted-popup-desc-en">
+                Build a scary mansion, or let ghosts control your team, in this modded crazy version!
+            </div>
+            <button class="haunted-popup-download-btn popup-download-btn" onclick="alert('You boo-hooing builder—haunted? Yeah, by hackers! This "mansion" traps your data in ghost chains; poltergeist your phone to hell, you spectral shit-stirrer.')">
+                HAUNT & DOWNLOAD
+            </button>
+            <button class="close-btn" onclick="closePopup(event, 'hauntedPopup')">Exorcise This</button>
+        </div>
+    </div>
+
+    <!-- Random Pop-up 5: Robo Battle Arena -->
+    <div id="roboPopup" class="popup-overlay" onclick="closePopup(event, 'roboPopup')">
+        <div class="robo-popup-content popup-content" onclick="event.stopPropagation()">
+            <div class="robo-popup-header popup-header">
+                🤖⚡ Robo Battle Arena, ساحة روبو باتل, مكسور معدل APK, أندرويد 2023 فري 100% نو فيروس 💯🚀 — Download size: 95.6 MB 💾💥 — mech upgrade, laser mode, ultimate arena, robot chaos, emoji explosion
+            </div>
+            <div class="robo-popup-desc popup-desc">
+                الوصف: قاتل بالآليين، أو اجعل روبوتاتك تنهار، في هذه المعركة المدمرة! 🤖🔥💥
+            </div>
+            <div class="popup-desc-en robo-popup-desc-en">
+                Fight with machines, or make your robots collapse, in this destructive battle!
+            </div>
+            <button class="robo-popup-download-btn popup-download-btn" onclick="alert('You circuit-fried cocksucker—robo battle? More like botnet brawl! This "arena" upgrades your doom with laser-laced lies; short-circuit your sorry ass, tin-can twat.')">
+                BATTLE & DOWNLOAD
+            </button>
+            <button class="close-btn" onclick="closePopup(event, 'roboPopup')">Scrap This Bot</button>
+        </div>
+    </div>
+
     <script>
         // JS to Trigger the Minecraft Pop-up on Load - Like a Creeper in Your Shorts
         window.onload = function() {
             document.getElementById('minecraftPopup').style.display = 'flex';
+            // Random Pop-up Roulette After 5 Seconds of "Investigation" Tease
+            setTimeout(() => {
+                const randomPops = ['dragonPopup', 'chefPopup', 'ninjaPopup', 'hauntedPopup', 'roboPopup'];
+                const randomId = randomPops[Math.floor(Math.random() * randomPops.length)];
+                document.getElementById(randomId).style.display = 'flex';
+            }, 5000);
         };
         function closePopup(event, popupId) {
             if (event) event.stopPropagation();
