--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mad Game Grid Chaos</title>
+<title>MichaelSoftware Store</title>
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -115,7 +115,7 @@
 </head>
 <body>
 
-<h1 style="text-align:center; margin-top:20px;">Mad Game Grid Chaos ⚡🔥💥</h1>
+<h1 style="text-align:center; margin-top:20px;">MichaelSoftware EXE and APK Store⚡🔥💥</h1>
 
 <!-- Random broken English + Arabic + Hindi lines sprinkled -->
 <p style="text-align:center; font-size:14px;">مرحبا दोस्त, welcome to zee madness! यहाँ कुछ crazy stuffs for you 💣💥</p>
