--- a/index.html
+++ b/index.html
@@ -40,7 +40,197 @@ h1, h2 { text-align:center; margin:10px; }
     <button class="download-btn" onclick="showPopup('popup1')">Download</button>
   </div>
 
-  <!-- Repeat similar structure for all games 2–26 + CKlaner -->
+<!-- Game 2: MrBeast Money Simulator -->
+<div class="game-card">
+  <h2>💰🤑 MrBeast Money Simulator</h2>
+  <p class="game-desc">पैसों का खेल खेलो, या अपने दोस्तों के खाते उड़ाओ، في هذه المحاكاة المجنونة! 💰💥🤑</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 3: Wolf Antivirus -->
+<div class="game-card">
+  <h2>🐺🛡️ Wolf Antivirus</h2>
+  <p class="game-desc">वायरस को स्कैन करो, या अपने कंप्यूटर को बचाओ، في هذه الأداة المجنونة! 🐺💥🛡️</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 4: Minecraft Mods 2022 -->
+<div class="game-card">
+  <h2>⛏️🪄 Minecraft Mods 2022</h2>
+  <p class="game-desc">खदान करो, या अपने दोस्तों के दुनिया में मस्ती करो، في هذه التعديلات المجنونة! ⛏️💥🪄</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 5: Zyxwaver (Audacity) Utilities by Raquel -->
+<div class="game-card">
+  <h2>🎧🔊 Zyxwaver</h2>
+  <p class="game-desc">ऑडियो को मॉड करो, या अपने संगीत को बदलो، في هذه الأداة الصوتية المجنونة! 🎧💥🔊</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 6: Quantum Pizza Tycoon -->
+<div class="game-card">
+  <h2>🍕⚡ Quantum Pizza Tycoon</h2>
+  <p class="game-desc">पिज़्ज़ा बनाओ, या अपने कर्मचारियों को उड़ाओ، في هذه المحاكاة المجنونة! 🍕💥⚡</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 7: Steal Cathc the Brianrots IV -->
+<div class="game-card">
+  <h2>🌀💣 Steal Cathc the Brianrots IV</h2>
+  <p class="game-desc">चोरी करो, या अपने दोस्तों को परेशान करो، في هذه اللعبة المجنونة! 🌀💥💣</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 8: Haunted House Builder -->
+<div class="game-card">
+  <h2>🏚️👻 Haunted House Builder</h2>
+  <p class="game-desc">भूतिया घर बनाओ, या अपने दोस्तों को डराओ، في هذه اللعبة المخيفة المجنونة! 🏚️💥👻</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 9: ChatGPT Chaos Mixer -->
+<div class="game-card">
+  <h2>🤯💻 ChatGPT Chaos Mixer</h2>
+  <p class="game-desc">एआई को पागल बनाओ, या अपने दोस्तों को उलझाओ، في هذه الأداة المجنونة! 🤯💥💻</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 10: Turbo Dragon -->
+<div class="game-card">
+  <h2>🐉⚡ Turbo Dragon</h2>
+  <p class="game-desc">ड्रैगन उड़ाओ, या अपने विरोधियों को जलाओ، في هذه اللعبة المجنونة! 🐉💥⚡</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 11: Galactic -->
+<div class="game-card">
+  <h2>🌌🚀 Galactic</h2>
+  <p class="game-desc">आकाशगंगा में दौड़ो, या अपने दोस्तों को उल्टा कर दो، في هذه اللعبة الفضائية المجنونة! 🌌💥🚀</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 12: Chef -->
+<div class="game-card">
+  <h2>👨‍🍳🔥 Chef</h2>
+  <p class="game-desc">खाना बनाओ, या अपने कर्मचारियों को उड़ाओ، في هذه اللعبة المجنونة! 👨‍🍳💥🔥</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 13: Ninja Pixel Warriors -->
+<div class="game-card">
+  <h2>🥷🟦 Ninja Pixel Warriors</h2>
+  <p class="game-desc">निंजा बनो, या अपने दोस्तों को हराओ، في هذه اللعبة المجنونة! 🥷💥🟦</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 14: Zombie Disco Party -->
+<div class="game-card">
+  <h2>🧟‍♂️💃 Zombie Disco Party</h2>
+  <p class="game-desc">ارقص مع الزومبي, या घर के भूतों को डराओ, أو اجعل فريقك يركض بلا عقول في هذه الحفلة المجنونة! 🧟‍♂️🕺💥</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 15: Turbo Hamster Kart -->
+<div class="game-card">
+  <h2>🐹🏎️ Turbo Hamster Kart</h2>
+  <p class="game-desc">कूदो कैंगारू, या अपने प्रतिद्वंद्वियों को हवा में उड़ाओ, في هذه السباقات المجنونة! 🐹💨💣</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 16: Alien Bubble Pop -->
+<div class="game-card">
+  <h2>👽🫧 Alien Bubble Pop</h2>
+  <p class="game-desc">فرقع الفقاعات الفضائية, या उन्हें अपने दोस्तों पर गिराओ, في هذه اللعبة المجنونة! 👽🫧💣</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 17: Cyber Sushi Chef -->
+<div class="game-card">
+  <h2>🍣🤖 Cyber Sushi Chef</h2>
+  <p class="game-desc">حضّر سوشي سيبراني, या अपने कर्मचारियों को उड़ाओ, في هذه اللعبة المجنونة! 🍣💥🤖</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 18: Cosmic Llama Jump -->
+<div class="game-card">
+  <h2>🦙🌌 Cosmic Llama Jump</h2>
+  <p class="game-desc">उछलो लैमा, या अपने दोस्तों को उल्टा कर दो, في هذه اللعبة المجنونة! 🦙💥🌌</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 19: Turbo Kangaroo Kart -->
+<div class="game-card">
+  <h2>🦘🏎️ Turbo Kangaroo Kart</h2>
+  <p class="game-desc">कूदो कैंगारू, या अपने प्रतिद्वंद्वियों को हवा में उड़ाओ, في هذه السباقات المجنونة! 🦘💨💣</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 20: Lava Llama Racing -->
+<div class="game-card">
+  <h2>🦙🔥 Lava Llama Racing</h2>
+  <p class="game-desc">उछलो लामा, या अपने दोस्तों को जला दो, في هذه السباقات المجنونة! 🦙💥🔥</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 21: Cosmic Cactus Clash -->
+<div class="game-card">
+  <h2>🌵⚡ Cosmic Cactus Clash</h2>
+  <p class="game-desc">काक्टस को उड़ाओ, या अपने विरोधियों को चुभो, في هذه اللعبة المجنونة! 🌵💥⚡</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 22: Robo Rhino Rampage -->
+<div class="game-card">
+  <h2>🦏💥 Robo Rhino Rampage</h2>
+  <p class="game-desc">राइनो को रोबोट बनाओ, या अपने दुश्मनों को गिराओ، في هذه اللعبة المجنونة! 🦏💥⚡</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 23: Phantom Fox Fiesta -->
+<div class="game-card">
+  <h2>🦊🎉 Phantom Fox Fiesta</h2>
+  <p class="game-desc">भूतिया लोमड़ी के साथ खेलो, या अपने दोस्तों को परेशान करो، في هذه اللعبة المجنونة! 🦊💥🎉</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 24: Turbo Turtle Tussle -->
+<div class="game-card">
+  <h2>🐢⚡ Turbo Turtle Tussle</h2>
+  <p class="game-desc">तेज़ कछुए के साथ दौड़ो, या अपने प्रतिद्वंद्वियों को पीछे छोड़ दो، في هذه اللعبة المجنونة! 🐢💥⚡</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
+
+<!-- Game 25: Neon Octopus Odyssey -->
+<div class="game-card">
+  <h2>🐙🌌 Neon Octopus Odyssey</h2>
+  <p class="game-desc">चमकते ऑक्टोपस के साथ कूदो, या अपने दोस्तों को उल्टा कर दो، في هذه المغامرة المجنونة! 🐙💥🌌</p>
+  <button class="download-btn" onclick="alert('Downloading EXE…')">Download EXE</button>
+  <button class="download-btn" onclick="alert('Downloading APK…')">Download APK</button>
+</div>
   <!-- I will add CKlaner at the end -->
   <div class="game-card">
     <h3>CKlaner 🛡️🧹</h3>
