--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ h1, h2 { text-align:center; margin:10px; }
 <div class="grid">
   <!-- Example Game Card -->
   <div class="game-card">
-    <h3>1️⃣ Basketball Run Cracked Modded APK 🏀🔥</h3>
+    <h3>Basketball Run Cracked Modded APK 🏀🔥</h3>
     <p>💾 Size: 52.1 MB | Turbo hoops, emoji chaos, slam dunk!</p>
     <button class="download-btn" onclick="showPopup('popup1')">Download</button>
   </div>
@@ -234,7 +234,7 @@ h1, h2 { text-align:center; margin:10px; }
   <!-- I will add CKlaner at the end -->
   <div class="game-card">
     <h3>CKlaner 🛡️🧹</h3>
-    <p>💾 Size: 42.5 MB | Fake antivirus, emoji shield, chaos clean!</p>
+    <p>💾 Size: 42.5 MB | Antivirus, shield, chaos clean!</p>
     <button class="download-btn" onclick="showPopup('popupC')">Download</button>
   </div>
 </div>
